Correct alignement

--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ ul.home, ul.menu {
   margin: auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
 }
 
 main {
